Corrections to end of 2.1.3

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -128,16 +128,18 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 %=========================================================================================================
 \subsection{Roy Want's Virtuality Matrix}
 \label{roy-wants-virtuality-matrix}
-Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the cross reality paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{Want_virtuality_matrix_original.png}). Whilst this is a useful representation, some of the definitions and criteria depicted do not match with those of Milgram and Kishino or even with those of other authors in the same issue of Pervasive, let alone other publications within the wider literature. This is a prime example of the importance of establishing an unambiguous set of definitions before embarking upon the path of introducing a new category of alternate reality. Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram and Kishino and the wider literature.
+Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing~\cite{Want2009} dedicated to the cross reality paradigm (discussed in section \ref{sec_crossreality}). He presents a 2x2 matrix that categorises terms according to whether the experience and overlay data are real or virtual. As with Mann's Venn diagram some of the resulting definitions produced by Want's matrix, reproduced in figure \ref{Want_virtuality_matrix_original.png} from the original in~\cite{Want2009}, differ from those of the reality-virtuality continuum and the wider literature; indeed some of the criteria would seem to conflict with those adopted by other authors within the same issue of Pervasive. While the subjective nature of virtual experience admonishes labelling either as more `correct' than the other, this nonetheless serves as a prime example of the importance of clearly stating which definitions will be adopted by this thesis before introducing the parallel reality concept, in order to avoid ambiguity.
 
-\TwoFig{Want_virtuality_matrix_original.png} {Want's virtuality matrix.} {Want_virtuality_matrix_original.png}
+\TwoFig{Want_virtuality_matrix_original.png} {Want's virtuality matrix, reproduced from~\cite{Want2009}.} {Want_virtuality_matrix_original.png}
        {Want_virtuality_matrix_modified.png} {Want's virtuality matrix after modification.} {Want_virtuality_matrix_modified.png}
 
-Where the original matrix positions cross reality in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions augmented virtuality. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this virtual primary environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by augmented virtuality.
+Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of Want's matrix that meshes more closely with the framework laid out by Milgram and Kishino and the definitions ultimately adopted by this thesis for framing parallel reality within. Where the original matrix positions cross reality in the upper left quadrant, the modified matrix instead positions augmented virtuality. The congruence of `experience virtual' and `overlay data real' would seem to hint toward a position within the right half of the reality-virtuality continuum and a single partially modelled environment, rather than eliciting ideas of the two discrete environments, one real and the other virtual, that the cross reality and parallel reality concepts capture.
 
-The original matrix also features the term embodied virtuality in the upper right quadrant, at the congruence of `experience real world' and `overlay data real'. Want explains that this is an alternative term for \textit{ubiquitous computing} which is \textit{``essentially the opposite of VR''}. The modified matrix adopts the position that the opposite of virtual reality is simply reality and that ubiquitous computing does not constitute a category of alternate reality but rather a model of human-computer interaction (that can be implemented in either reality or augmented reality, depending upon how the ubiquitous computing infrastructure presents information to the user). A ubiquitous computing system is necessarily a real environment, as by definition it is the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
+The original matrix also features the term embodied virtuality, in the upper right quadrant at the congruence of `experience real world' and `overlay data real'. Want explains that embodied virtuality is used here as an alternative term for \textit{ubiquitous computing} which he considers to be \textit{``essentially the opposite of VR''} and describes the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. While the reality-virtuality continuum concept and the position taken by this thesis posit that the opposite of VR is simply reality, as shown in the modified matrix in figure \ref{Want_virtuality_matrix_modified.png}, an equally valid alternative position (and presumably that held by Want) is that tangible interfaces can be employed to embody aspects of a virtual world that have no physical counterpart in the real world, and to present abstractions of real world concepts, leading to the congruence of real overlay data and real experience as embodied virtuality.
 
-Finally the modified matrix removes the central mixed reality section from the original matrix, as its position could be misleading. Taking the boundaries between the sections literally, the reader could be led to believe that a purely virtual reality environment can be considered mixed reality, which it is not. If one wished to picture the position of mixed reality upon the modified matrix, one would do better to picture it covering the area enclosed by the union of the augmented virtuality and augmented reality regions.
+%The modified matrix adopts the position that the opposite of virtual reality is simply reality and that ubiquitous computing does not constitute a category of alternate reality but rather a model of human-computer interaction (that can be implemented in either reality or augmented reality, depending upon how the ubiquitous computing infrastructure presents information to the user). A ubiquitous computing system is necessarily a real environment, as by definition it is the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
+
+Finally on a more stylistic level, the modified matrix removes the central mixed reality section from the original matrix as its position could be misleading. Taking the boundaries between the sections literally, the reader could be led to believe that a purely virtual reality environment is also to be considered mixed reality, which is not a position proffered by Want nor by the wider literature. If one wished to picture the position of mixed reality upon the modified matrix, one would do better to picture it covering the area enclosed by the union of the augmented virtuality and augmented reality regions.
 
 %=========================================================================================================
 
